package ua.code.intership.proft.it.soft.model;

import lombok.Builder;
import lombok.Data;

@Data
@Builder
public class PlanetarySystem {
    private long id;
    private String name;
}
