package ua.code.intership.proft.it.soft.model.si.data;

public enum SIUnitLength {
    METER,
    KILOMETER,
    CENTIMETER,
}
