package ua.code.intership.proft.it.soft.model.si.data;

public enum SIUnitMass {
    KILOGRAM,
    GRAM;

}
